Üretim tarafında hurda ve ikinci kalite eklendi

--- a/NOVA/Views/IK/PersonelBilgi.cshtml
+++ b/NOVA/Views/IK/PersonelBilgi.cshtml
@@ -32,7 +32,7 @@
                                 <div class="d-flex align-items-start align-items-sm-center gap-4">
                                     @{ string s = ViewBag.Id + ".png?" + DateTime.Now.Ticks.ToString();}
 
-                                    <img src="~/assets/img/avatars/@s" alt="user-avatar" class="d-block rounded" height="100" width="100" id="blah">
+                                    <img src="~/assets/img/avatars/@s" alt="user-avatar" class="d-block rounded" height="100" width="100" id="blah" onerror="javascript:this.src='/assets/img/avatars/10000.png'">
 
 
                                 </div>
