--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -100,7 +100,7 @@
                                     <div class="d-flex align-items-start align-items-sm-center gap-4">
 
 
-                                        <img src="~/assets/img/avatars/@s" alt="user-avatar" class="d-block rounded" height="100" width="100" id="blah">
+                                        <img src="~/assets/img/avatars/@s" alt="user-avatar" class="d-block rounded" height="100" width="100" id="blah" onerror="javascript:this.src='/assets/img/avatars/10000.png'">
                                         <div class="button-wrapper">
                                             <label for="upload" class="btn btn-primary me-2 mb-4" tabindex="0">
                                                 <span class="d-none d-sm-block">Fotoğraf Yükle</span>
