MES - Yetki eklendi.

--- a/NOVA/Views/Shared/_Layout_MES.cshtml
+++ b/NOVA/Views/Shared/_Layout_MES.cshtml
@@ -25,58 +25,6 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
     <style>
-        #scroll-container {
-            border-radius: 5px;
-            overflow: hidden;
-        }
-
-        #scroll-text {
-            /* animation properties */
-            -moz-transform: translateX(100%);
-            -webkit-transform: translateX(100%);
-            transform: translateX(100%);
-            -moz-animation: my-animation 30s linear infinite;
-            -webkit-animation: my-animation 30s linear infinite;
-            animation: my-animation 30s linear infinite;
-        }
-
-
-        /* for Firefox */
-        @@-moz-keyframes my-animation {
-            from {
-                -moz-transform: translateX(100%);
-            }
-
-            to {
-                -moz-transform: translateX(-100%);
-            }
-        }
-
-        /* for Chrome */
-        @@-webkit-keyframes my-animation {
-            from {
-                -webkit-transform: translateX(100%);
-            }
-
-            to {
-                -webkit-transform: translateX(-100%);
-            }
-        }
-
-        @@keyframes my-animation {
-            from {
-                -moz-transform: translateX(100%);
-                -webkit-transform: translateX(100%);
-                transform: translateX(100);
-            }
-
-            to {
-                -moz-transform: translateX(-100%);
-                -webkit-transform: translateX(-100%);
-                transform: translateX(-80%);
-            }
-        }
-
         @@media screen and (max-width: 600px) {
             .marquee-w {
                 top: 30vh;
@@ -102,7 +50,7 @@
                 height: 30px;
                 position: absolute;
                 overflow: hidden;
-                animation: marquee 65s linear infinite;
+                animation: marquee 120s linear infinite;
             }
 
                 .marquee div:hover {
@@ -125,7 +73,7 @@
             }
 
             100% {
-                left: -370%;
+                left: -400%;
             }
         }
 
@@ -279,112 +227,23 @@
     </div>
 
     <div class="main">
+
         @RenderBody()
-        <div class="marquee">
-            <div onmouseover="this.stop();" onmouseout="this.start();">
+
+        <div class="marquee" onmouseover="this.stop();" onmouseout="this.start();">
+            <div>
                 <span>
-
-                    <label class="ps-2">
-                        AYLIK ÖZET:
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        BK01: MİKTAR <label id="BKMikAy"></label> HURDA <label id="BKHurAy"></label> KALİTE <label id="BKKalAy"></label>
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        DL01: MİKTAR <label id="DLMikAy"></label> HURDA <label id="DLHurAy"></label> KALİTE <label id="DLKalAy"></label>
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        MH01: MİKTAR <label id="MHMikAy"></label> HURDA <label id="MHHurAy"></label> KALİTE <label id="MHKalAy"></label>
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        PB01: MİKTAR <label id="PBMikAy"></label> HURDA <label id="PBHurAy"></label> KALİTE <label id="PBKalAy"></label>
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        PB02: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-
-                    <label class="ps-2">
-                        RF01: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        RF02: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        SM01: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        SM02: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        SM03: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        TP01:  MİKTAR <label id="TPMikAy"></label> HURDA <label id="TPHurAy"></label> KALİTE <label id="TPKalAy"></label>
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        YILLIK ÖZET:
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        BK01: MİKTAR <label id="BKMikYil"></label> HURDA <label id="BKHurYil"></label> KALİTE <label id="BKKalYil"></label>
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        DL01: MİKTAR <label id="DLMikYil"></label> HURDA <label id="DLHurYil"></label> KALİTE <label id="DLKalYil"></label>
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        MH01: MİKTAR <label id="MHMikYil"></label> HURDA <label id="MHHurYil"></label> KALİTE <label id="MHKalYil"></label>
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        PB01: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        PB02: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-
-                    <label class="ps-2">
-                        RF01: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        RF02: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        SM01: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        SM02: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        SM03: MİKTAR - HURDA - KALİTE -
-                    </label>
-                    <img class="mb-1" style="margin-right: -3px; margin-left: 25px; height: 15px " src="~/images/novasaydam.png" alt="">
-                    <label class="ps-2">
-                        TP01: MİKTAR <label id="TPMikYil"></label> HURDA <label id="TPHurYil"></label> KALİTE <label id="TPKalYil"></label>
-                    </label>
+                    <label id="AylikMiktarOzet"></label>
+                    <label id="AylikHurdaOzet"></label>
+                    <label id="AylikKalite2Ozet"></label>
+                    <label id="YillikMiktarOzet"></label>
+                    <label id="YillikHurdaOzet"></label>
+                    <label id="YillikKalite2Ozet"></label>
                 </span>
 
             </div>
         </div>
+
         <div class="footer">
             <span>2023 &copy; designed by <img src="/assets/img/icons/brands/Nova.png" height="25" width="25" /> NOVA</span>
         </div>
@@ -401,48 +260,41 @@
 
                 url: 'http://192.168.2.13:83/api/makine/mes',
                 success: function (data) {
-                    var BK01 = data.filter(x => x.HATKODU == 'BK01')[0];
-                    var DL01 = data.filter(x => x.HATKODU == 'DL01')[0];
-                    var MH01 = data.filter(x => x.HATKODU == 'MH01')[0];
-                    var TP01 = data.filter(x => x.HATKODU == 'TP01')[0];
-                    var PB01 = data.filter(x => x.HATKODU == 'PB01')[0];
-                    $('#MHMikAy').html(MH01.AYLIK_TOPLAM_MIKTAR != null ? (MH01.AYLIK_TOPLAM_MIKTAR).toLocaleString() + " KG" : '-')
-                    $('#MHHurAy').html(MH01.AY_TOPLAM_HURDA != null ? (MH01.AY_TOPLAM_HURDA).toLocaleString() + " KG" : '-')
-                    $('#MHKalAy').html(MH01.AY_TOPLAM_KALITE2 != null ? (MH01.AY_TOPLAM_KALITE2).toLocaleString() + " KG" : '-')
-                    $('#MHMikYil').html(MH01.YILLIK_TOPLAM_MIKTAR != null ? (MH01.YILLIK_TOPLAM_MIKTAR).toLocaleString() + " KG" : '-')
-                    $('#MHHurYil').html(MH01.YIL_TOPLAM_HURDA != null ? (MH01.YIL_TOPLAM_HURDA).toLocaleString() + " KG" : '-')
-                    $('#MHKalYil').html(MH01.YIL_TOPLAM_KALITE2 != null ? (MH01.YIL_TOPLAM_KALITE2).toLocaleString() + " KG" : '-')
-                    $('#BKMikAy').html(BK01.AYLIK_TOPLAM_MIKTAR != null ? (BK01.AYLIK_TOPLAM_MIKTAR).toLocaleString() + " KG" : '-')
-                    $('#BKHurAy').html(BK01.AY_TOPLAM_HURDA != null ? (BK01.AY_TOPLAM_HURDA).toLocaleString() + " KG" : '-')
-                    $('#BKKalAy').html(BK01.AY_TOPLAM_KALITE2 != null ? (BK01.AY_TOPLAM_KALITE2).toLocaleString() + " KG" : '-')
-                    $('#BKMikYil').html(BK01.YILLIK_TOPLAM_MIKTAR != null ? (BK01.YILLIK_TOPLAM_MIKTAR).toLocaleString() + " KG" : '-')
-                    $('#BKHurYil').html(BK01.YIL_TOPLAM_HURDA != null ? (BK01.YIL_TOPLAM_HURDA).toLocaleString() + " KG" : '-')
-                    $('#BKKalYil').html(BK01.YIL_TOPLAM_KALITE2 != null ? (BK01.YIL_TOPLAM_KALITE2).toLocaleString() + " KG" : '-')
-                    $('#DLMikAy').html(DL01.AYLIK_TOPLAM_MIKTAR != null ? (DL01.AYLIK_TOPLAM_MIKTAR).toLocaleString() + " KG" : '-')
-                    $('#DLHurAy').html(DL01.AY_TOPLAM_HURDA != null ? (DL01.AY_TOPLAM_HURDA).toLocaleString() + " KG" : '-')
-                    $('#DLKalAy').html(DL01.AY_TOPLAM_KALITE2 != null ? (DL01.AY_TOPLAM_KALITE2).toLocaleString() + " KG" : '-')
-                    $('#DLMikYil').html(DL01.YILLIK_TOPLAM_MIKTAR != null ? (DL01.YILLIK_TOPLAM_MIKTAR).toLocaleString() + " KG" : '-')
-                    $('#DLHurYil').html(DL01.YIL_TOPLAM_HURDA != null ? (DL01.YIL_TOPLAM_HURDA).toLocaleString() + " KG" : '-')
-                    $('#DLKalYil').html(DL01.YIL_TOPLAM_KALITE2 != null ? (DL01.YIL_TOPLAM_KALITE2).toLocaleString() + " KG" : '-')
-                    $('#TPMikAy').html(TP01.AYLIK_TOPLAM_MIKTAR != null ? (TP01.AYLIK_TOPLAM_MIKTAR).toLocaleString() + " KG" : '-')
-                    $('#TPHurAy').html(TP01.AY_TOPLAM_HURDA != null ? (TP01.AY_TOPLAM_HURDA).toLocaleString() + " KG" : '-')
-                    $('#TPKalAy').html(TP01.AY_TOPLAM_KALITE2 != null ? (TP01.AY_TOPLAM_KALITE2).toLocaleString() + " KG" : '-')
-                    $('#TPMikYil').html(TP01.YILLIK_TOPLAM_MIKTAR != null ? (TP01.YILLIK_TOPLAM_MIKTAR).toLocaleString() + " KG" : '-')
-                    $('#TPHurYil').html(TP01.YIL_TOPLAM_HURDA != null ? (TP01.YIL_TOPLAM_HURDA).toLocaleString() + " KG" : '-')
-                    $('#TPKalYil').html(TP01.YIL_TOPLAM_KALITE2 != null ? (TP01.YIL_TOPLAM_KALITE2).toLocaleString() + " KG" : '-')
-                    $('#PBMikAy').html(PB01.AYLIK_TOPLAM_MIKTAR != null ? (PB01.AYLIK_TOPLAM_MIKTAR).toLocaleString() + " KG" : '-')
-                    $('#PBHurAy').html(PB01.AY_TOPLAM_HURDA != null ? (PB01.AY_TOPLAM_HURDA).toLocaleString() + " KG" : '-')
-                    $('#PBKalAy').html(PB01.AY_TOPLAM_KALITE2 != null ? (PB01.AY_TOPLAM_KALITE2).toLocaleString() + " KG" : '-')
-                    $('#PBMikYil').html(PB01.YILLIK_TOPLAM_MIKTAR != null ? (PB01.YILLIK_TOPLAM_MIKTAR).toLocaleString() + " KG" : '-')
-                    $('#PBHurYil').html(PB01.YIL_TOPLAM_HURDA != null ? (PB01.YIL_TOPLAM_HURDA).toLocaleString() + " KG" : '-')
-                    $('#PBKalYil').html(PB01.YIL_TOPLAM_KALITE2 != null ? (PB01.YIL_TOPLAM_KALITE2).toLocaleString() + " KG" : '-')
+                    if (data.length > 0) {
+                        var AylikMiktarBilgi = '<label class="ms-3">AYLIK MİKTAR→ </label>';
+                        var AylikHurdaBilgi = '<label class="ms-3">AYLIK HURDA→ </label>';
+                        var AylikKalite2Bilgi = '<label class="ms-3">AYLIK 2. KALİTE→ </label>';
 
+                        var YillikMiktarBilgi = '<label class="ms-3">YILLIK MİKTAR→ </label>';
+                        var YillikHurdaBilgi = '<label class="ms-3">YILLIK HURDA→ </label>';
+                        var YillikKalite2Bilgi = '<label class="ms-3">YILLIK 2. KALİTE→ </label>';
 
+                        data?.forEach((item) => {
+                            AylikMiktarBilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AYLIK_TOPLAM_MIKTAR, 'KG')}`;
+                            AylikHurdaBilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AY_TOPLAM_HURDA, 'KG')}`;
+                            AylikKalite2Bilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.AY_TOPLAM_KALITE2, 'KG')}`;
 
+                            YillikMiktarBilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YILLIK_TOPLAM_MIKTAR, 'KG')}`;
+                            YillikHurdaBilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YIL_TOPLAM_HURDA, 'KG')}`;
+                            YillikKalite2Bilgi += `<img class="mb-1" style="margin-right: 3px; margin-left: 25px; height: 15px " src="/assets/img/icons/brands/Nova.png" alt="">${item.HATKODU}: ${MiktarFormat(item.YIL_TOPLAM_KALITE2, 'KG')}`;
+                        });
+
+                        $('#AylikMiktarOzet').html(AylikMiktarBilgi + '<label class="ms-3">•</label>');
+                        $('#AylikHurdaOzet').html(AylikHurdaBilgi + '<label class="ms-3">•</label>');
+                        $('#AylikKalite2Ozet').html(AylikKalite2Bilgi + '<label class="ms-3">•</label>');
+
+                        $('#YillikMiktarOzet').html(YillikMiktarBilgi + '<label class="ms-3">•</label>');
+                        $('#YillikHurdaOzet').html(YillikHurdaBilgi + '<label class="ms-3">•</label>');
+                        $('#YillikKalite2Ozet').html(YillikKalite2Bilgi + '<label class="ms-3">•</label>');
+                    }
                 }
             });
-        }, 1000)
+        }, 1000);
 
+
+        function MiktarFormat(Value, Unit = '') {
+            return Value !== null ? `${parseFloat(Value).toLocaleString(undefined, { minimumFractionDigits: 0, maximumFractionDigits: 0 })} ${Unit}` : '-';
+        }
     </script>
 
     @RenderSection("Scripts", false)
