--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -426,9 +426,9 @@
                             <div id="uretimopen" class="nav__dropdown-collapse">
                                 <div class="nav__dropdown-content">
 
-                                    <a href="@Url.Action("Index", "IsEmri")" id="isemri1" style="cursor: pointer; display: @ViewBag.DisplayIsEmriKayit" class="nav__dropdown-item">• İş Emri Giriş</a>
                                     <a href="@Url.Action("IsEmri", "IsEmri")" id="isemri2" style="cursor: pointer; display: @ViewBag.DisplayIsEmriKayit" class="nav__dropdown-item">• İş Emri</a>
                                     <a href="@Url.Action("Index", "Uretim")" id="anlikuretim1" style="cursor:pointer;display:  @ViewBag.DisplayAnlikUretim" class="nav__dropdown-item">• Üretim Kayıtları</a>
+                                    <a href="@Url.Action("MES", "Uretim")" id="mes" style="cursor:pointer;display:  @ViewBag.DisplayMES" class="nav__dropdown-item">• MES</a>
                                 </div>
                             </div>
                         </div>
