--- a/NOVA/Views/Shared/_Layout_menu2.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu2.cshtml
@@ -109,11 +109,6 @@
             </a>
             <ul class="menu-sub">
 
-                <li class="menu-item" id="isemri" style="display: @ViewBag.DisplayIsEmriKayit">
-                    <a href="@Url.Action("Index", "IsEmri")" class="menu-link">
-                        <div data-i18n="Without menu">İş Emri Giriş</div>
-                    </a>
-                </li>
                 <li class="menu-item" id="isemri2" style="display: @ViewBag.DisplayIsEmriKayit">
                     <a href="@Url.Action("IsEmri", "IsEmri")" class="menu-link">
                         <div data-i18n="Without menu">İş Emri</div>
@@ -122,6 +117,11 @@
                 <li class="menu-item" id="anlikuretim" style="display: @ViewBag.DisplayAnlikUretim">
                     <a href="@Url.Action("Index", "Uretim")" class="menu-link">
                         <div data-i18n="Without menu">Üretim Kayıtları</div>
+                    </a>
+                </li>
+                <li class="menu-item" id="mes" style="display: @ViewBag.DisplayMES">
+                    <a href="@Url.Action("Mes", "Uretim")" class="menu-link">
+                        <div data-i18n="Without menu">MES</div>
                     </a>
                 </li>
             </ul>
